unpackaged/main/default/objects/Finance_Checklist__c/Finance_Checklist__c.object-meta.xml
<CustomObject>
    <label>Finance Checklist</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Finance Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finance Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>