unpackaged/main/default/objects/Finance_Checklist__c/fields/Agreement_etc_for_Tax_Exempt_Status__c.field-meta.xml
<CustomField>
    <fullName>Agreement_etc_for_Tax_Exempt_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreement, etc. for Tax Exempt Status</label>
    <type>Checkbox</type>
</CustomField>