unpackaged/main/default/objects/Finance_Checklist__c/fields/Any_sync_errors_to_correct_in_system__c.field-meta.xml
<CustomField>
    <fullName>Any_sync_errors_to_correct_in_system__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Any sync errors to correct in system</label>
    <type>Checkbox</type>
</CustomField>