unpackaged/main/default/objects/Finance_Checklist__c/fields/Check_Currency_on_Quote_Opp_Contract__c.field-meta.xml
<CustomField>
    <fullName>Check_Currency_on_Quote_Opp_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Currency on Quote/Opp/Contract</label>
    <type>Checkbox</type>
</CustomField>