unpackaged/main/default/objects/Finance_Checklist__c/fields/Check_for_any_Finance_or_Billing_notes__c.field-meta.xml
<CustomField>
    <fullName>Check_for_any_Finance_or_Billing_notes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check for any Finance or Billing notes</label>
    <type>Checkbox</type>
</CustomField>