unpackaged/main/default/objects/Finance_Checklist__c/fields/Check_handwritten_edits_to_Order_Form__c.field-meta.xml
<CustomField>
    <fullName>Check_handwritten_edits_to_Order_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check handwritten edits to Order Form</label>
    <type>Checkbox</type>
</CustomField>