unpackaged/main/default/objects/Finance_Checklist__c/fields/Check_if_products_were_created_properly__c.field-meta.xml
<CustomField>
    <fullName>Check_if_products_were_created_properly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check if products were created properly</label>
    <type>Checkbox</type>
</CustomField>