unpackaged/main/default/objects/Finance_Checklist__c/fields/Check_if_Quote_have_terms_different_MSA__c.field-meta.xml
<CustomField>
    <fullName>Check_if_Quote_have_terms_different_MSA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check if Quote have terms different MSA</label>
    <type>Checkbox</type>
</CustomField>