unpackaged/main/default/objects/Finance_Checklist__c/fields/Check_MSA_for_Up_to_Price_Increases__c.field-meta.xml
<CustomField>
    <fullName>Check_MSA_for_Up_to_Price_Increases__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check MSA for Up to Price Increases</label>
    <type>Checkbox</type>
</CustomField>