unpackaged/main/default/objects/Finance_Checklist__c/fields/Check_subsidiary_matches_in_all_places__c.field-meta.xml
<CustomField>
    <fullName>Check_subsidiary_matches_in_all_places__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check subsidiary matches in all places</label>
    <type>Checkbox</type>
</CustomField>