unpackaged/main/default/objects/Finance_Checklist__c/fields/Checklist_Signed_off_by__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Signed_off_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checklist Signed off by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Finance_Checklists_User</relationshipName>
    <type>Lookup</type>
</CustomField>