unpackaged/main/default/objects/Finance_Checklist__c/fields/Checklist_Signed_off_date__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Signed_off_date__c</fullName>
    <label>Checklist Signed off date</label>
    <type>Date</type>
</CustomField>