unpackaged/main/default/objects/Finance_Checklist__c/fields/Confirm_Order_Form_Countersignature__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Order_Form_Countersignature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm Order Form Countersignature</label>
    <type>Checkbox</type>
</CustomField>