unpackaged/main/default/objects/Finance_Checklist__c/fields/Decommission_Check_product_quantities_0__c.field-meta.xml
<CustomField>
    <fullName>Decommission_Check_product_quantities_0__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decommission: Check product quantities=0</label>
    <type>Checkbox</type>
</CustomField>