unpackaged/main/default/objects/Finance_Checklist__c/fields/Decommission_Product_ARR_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Decommission_Product_ARR_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decommission:Product ARR=Subscription</label>
    <type>Checkbox</type>
</CustomField>