unpackaged/main/default/objects/Finance_Checklist__c/fields/Decommission_Signed_decommission_doc__c.field-meta.xml
<CustomField>
    <fullName>Decommission_Signed_decommission_doc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decommission: Signed decommission doc</label>
    <type>Checkbox</type>
</CustomField>