unpackaged/main/default/objects/Finance_Checklist__c/fields/Decommissions_Check_decommision_date__c.field-meta.xml
<CustomField>
    <fullName>Decommissions_Check_decommision_date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decommissions: Check decommision date</label>
    <type>Checkbox</type>
</CustomField>