unpackaged/main/default/objects/Finance_Checklist__c/fields/Follow_Up_PO_requirement_documented__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_PO_requirement_documented__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow Up PO requirement documented</label>
    <type>Checkbox</type>
</CustomField>