unpackaged/main/default/objects/Finance_Checklist__c/fields/Net_Amount_Matches_Everywhere__c.field-meta.xml
<CustomField>
    <fullName>Net_Amount_Matches_Everywhere__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Net Amount Matches Everywhere</label>
    <type>Checkbox</type>
</CustomField>