unpackaged/main/default/objects/Finance_Checklist__c/fields/NetSuite_Customer_Cross_Check__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Customer_Cross_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NetSuite Customer Cross Check</label>
    <type>Checkbox</type>
</CustomField>