unpackaged/main/default/objects/Finance_Checklist__c/fields/Outstanding_AR__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_AR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outstanding AR</label>
    <type>Checkbox</type>
</CustomField>