unpackaged/main/default/objects/Finance_Checklist__c/fields/Past_Write_Offs__c.field-meta.xml
<CustomField>
    <fullName>Past_Write_Offs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Past Write Offs</label>
    <type>Checkbox</type>
</CustomField>