unpackaged/main/default/objects/Finance_Checklist__c/fields/PO_attached_and_Matches_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>PO_attached_and_Matches_if_applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO attached and Matches (if applicable)</label>
    <type>Checkbox</type>
</CustomField>