unpackaged/main/default/objects/Finance_Checklist__c/fields/Validate_Account_is_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Validate_Account_is_Legal_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validate Account is Legal Name</label>
    <type>Checkbox</type>
</CustomField>