unpackaged/main/default/objects/Finance_Checklist__c/fields/Validate_contract_term_and_dates__c.field-meta.xml
<CustomField>
    <fullName>Validate_contract_term_and_dates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validate contract term and dates</label>
    <type>Checkbox</type>
</CustomField>