unpackaged/main/default/objects/Finance_Checklist__c/fields/Verify_ARR_is_correct_in_all_places__c.field-meta.xml
<CustomField>
    <fullName>Verify_ARR_is_correct_in_all_places__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verify ARR is correct in all places</label>
    <type>Checkbox</type>
</CustomField>