unpackaged/main/default/objects/Finance_Checklist__c/fields/Verify_Bill_To_Addresses_under_the_MSA__c.field-meta.xml
<CustomField>
    <fullName>Verify_Bill_To_Addresses_under_the_MSA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verify Bill To Account</label>
    <type>Checkbox</type>
</CustomField>