unpackaged/main/default/objects/Finance_Checklist__c/fields/Verify_correct_product_codes__c.field-meta.xml
<CustomField>
    <fullName>Verify_correct_product_codes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verify correct product codes</label>
    <type>Checkbox</type>
</CustomField>