unpackaged/main/default/objects/Finance_Checklist__c/fields/Verify_Invoicing_Frequency_SaaS__c.field-meta.xml
<CustomField>
    <fullName>Verify_Invoicing_Frequency_SaaS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verify Invoicing Frequency SaaS</label>
    <type>Checkbox</type>
</CustomField>