unpackaged/main/default/objects/Finance_Checklist__c/fields/Verify_Invoicing_Terms_Services__c.field-meta.xml
<CustomField>
    <fullName>Verify_Invoicing_Terms_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verify Invoicing Terms Services</label>
    <type>Checkbox</type>
</CustomField>