unpackaged/main/default/objects/Finance_Checklist__c/fields/Verify_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Verify_Payment_Terms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verify Payment Terms</label>
    <type>Checkbox</type>
</CustomField>