unpackaged/main/default/objects/Finance_Checklist__c/fields/Verify_Plant_Product_Transaction_records__c.field-meta.xml
<CustomField>
    <fullName>Verify_Plant_Product_Transaction_records__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verify Plant-Product Transaction records</label>
    <type>Checkbox</type>
</CustomField>