unpackaged/main/default/objects/Finance_Checklist__c/fields/Verify_Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Verify_Ship_To__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verify Ship To</label>
    <type>Checkbox</type>
</CustomField>