unpackaged/main/default/objects/Finance_Checklist__c/fields/Verify_the_Invoice_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Verify_the_Invoice_Delivery_Method__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verify the Invoice Delivery Method</label>
    <type>Checkbox</type>
</CustomField>